--- a/UnityEL.csproj
+++ b/UnityEL.csproj
@@ -68,9 +68,12 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\BitwiseOrParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\BooleanParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\ClosePreviousParser.cs" />
-    <Compile Include="Assets\Scripts\UnityEL\Parsers\ComplimentParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\ComplementParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\CondtionalOperatorParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\DecimalParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\DivisionParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\DoubleCharacterParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\ExponentParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\FunctionParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\GroupEndParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\GroupParser.cs" />
@@ -80,8 +83,8 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\ModulusParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\MultiplicationParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\NotParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\NullCoalesceParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\OrParser.cs" />
-    <Compile Include="Assets\Scripts\UnityEL\Parsers\PowerParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\PropertyAccessorParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\SingleCharacterParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\StringParser.cs" />
@@ -89,10 +92,16 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\TokenParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\XorParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\AdditionToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\AndToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\ArgumentToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\BitwiseAndToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\BitwiseOrToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\BooleanToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\ComplementToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\ConditionalOperatorToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\DecimalToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\DivisionToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\ExponentToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\FunctionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\GroupToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\IdentifierToken.cs" />
@@ -100,12 +109,15 @@
     <Compile Include="Assets\Scripts\UnityEL\Tokens\KeyedAccessorToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\ModulusToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\MultiplicationToken.cs" />
-    <Compile Include="Assets\Scripts\UnityEL\Tokens\PowerToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\NotToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\NullCoalesceToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\OrToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\PropertyAccessorToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\StringToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\SubtractionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Token.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\ValueToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\XorToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\UnityELEvaluator.cs" />
     <Compile Include="Assets\Scripts\UnityEL\UnityELExpression.cs" />
     <Compile Include="Assets\Scripts\UnityEL\UnityELExpressionCompiler.cs" />
