--- a/UnityEL.csproj
+++ b/UnityEL.csproj
@@ -8,7 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <ProjectGuid>{77C7023D-3A7A-0E5B-61F2-B1C4AAA9EC43}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -67,6 +68,7 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\DecimalParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\TokenParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\BooleanToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\DecimalToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\RootToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Token.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\TokenImpl.cs" />
