--- a/UnityEL.csproj
+++ b/UnityEL.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\DoubleCharacterParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\AdditionParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\BooleanParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\CloseParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\DecimalParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\DivisionParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\FunctionParser.cs" />
@@ -81,6 +82,7 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\SymbolParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\TokenParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\BinaryToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\CloseableToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\AdditionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\BooleanToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\DecimalToken.cs" />
