--- a/UnityEL.csproj
+++ b/UnityEL.csproj
@@ -75,37 +75,45 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\CloseParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\DecimalParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\DivisionParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ExponentParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\FunctionParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\GroupParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\HexIntegerParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\IdentifierParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\IntegerParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\KeyedAccessParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ModulusParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\MultiplicationParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\PropertyAccessParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\StringParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\SubtractionParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\UnaryMinusParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\SingleCharacterParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\SymbolParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\TokenParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\UnaryTokenParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\BinaryToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\CloseableToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\AdditionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\BooleanToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\DecimalToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\DivisionToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ExponentToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\FunctionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\GroupToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\IdentifierToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\IntegerToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\KeyedAccessToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ModulusToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\MultiplicationToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\PropertyAccessToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\StringToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\SubtractionToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\UnaryMinusToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\RootToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Token.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\TokenImpl.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\UnaryToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\ValueToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\TypeCoercer.cs" />
     <Compile Include="Assets\Scripts\UnityEL\UnityELEvaluator.cs" />
